force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/LLC_BI__Pricing_Matrix__c.object-meta.xml
<CustomObject>
    <description>Use the Pricing Matrix object to import variables--such as credit score ranges, loan value ranges, and interest rates--for a variety of products. These variables are fed to the data table and used to calculate automated pricing.</description>
    <label>Pricing Matrix</label>
    <nameField>
        <label>Pricing Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>