force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Charge_Off__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Charge_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user selects this checkbox field to indicate the applicant&apos;s credit report contains a charge-off account. By default, this field is deselected.</description>
    <inlineHelpText>Select this field to indicate an applicant&apos;s credit report contains a charge-off account.</inlineHelpText>
    <label>Charge-Off</label>
    <type>Checkbox</type>
</CustomField>