force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Type__c</fullName>
    <description>The user populates this text field to indicate the high-level type of collateral pledged to a loan. For example, Real Estate, New Auto, Boat. By default, this field is blank.</description>
    <inlineHelpText>Enter the high-level type of pledged collateral in this field.</inlineHelpText>
    <label>Collateral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>