force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Credit_Score_Maximum__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Score_Maximum__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This number field is optional. The user manually populates this field with the high end of the credit score range.</description>
    <inlineHelpText>This number field is optional. The user manually populates this field with the high end of the credit score range.</inlineHelpText>
    <label>Maximum Credit Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>