force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate__c</fullName>
    <description>This percent field is optional. The user manually populates this field with the interest rate output for a loan with the identifying variables.</description>
    <inlineHelpText>This percent field is optional. The user manually populates this field with the interest rate output for a loan with the identifying variables.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>