force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Loan_Value_Minimum__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Value_Minimum__c</fullName>
    <description>This currency field is optional. The user manually populates this field with the low end of the loan value range.</description>
    <inlineHelpText>This currency field is optional. The user manually populates this field with the low end of the loan value range.</inlineHelpText>
    <label>Minimum Loan Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>