force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Maximum_Loan_To_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Loan_To_Value__c</fullName>
    <description>The user populates this percentage field to indicate the maximum loan-to-value ratio an applicant can have to qualify for an auto-approval decision. This field filters offers presented to the applicant. By default, this field is blank.</description>
    <inlineHelpText>Enter the maximum loan-to-value ratio an applicant must have to qualify for auto-approval in this field.</inlineHelpText>
    <label>Maximum Loan-to-Value</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>