force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Maximum_Mileage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Mileage__c</fullName>
    <description>The user populates this number field to indicate the maximum mileage the pledged collateral on a loan can have for an auto-approval decision. By default, this field is blank.</description>
    <inlineHelpText>Enter the maximum mileage pledged collateral may have to qualify a loan for auto-approval in this field.</inlineHelpText>
    <label>Maximum Mileage</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>