force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Minimum_Debt_To_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Debt_To_Income__c</fullName>
    <description>The user populates this percentage field to indicate the minimum debt-to-income ratio an applicant must have to qualify for an auto-approval decision. This field filters offers presented to the applicant. By default, this field is blank.</description>
    <inlineHelpText>Enter the minimum debt-to-income (DTI) ratio an applicant may have to qualify for auto-approval in this field.</inlineHelpText>
    <label>Minimum Debt-to-Income</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>