force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Product_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type_Name__c</fullName>
    <description>This text field is optional. The user manually populates this field with the name of the product type being priced.</description>
    <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product type being priced.</inlineHelpText>
    <label>Product Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>