force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Property_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Property_Type__c</fullName>
    <description>The user populates this text field to indicate the subtype of collateral pledged to a loan. For example, Primary, Secondary, Investment. By default, this field is blank.</description>
    <inlineHelpText>Enter the subtype of pledged collateral in this field.</inlineHelpText>
    <label>Property Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>