force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Region__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Region__c</fullName>
    <description>This picklist field is optional. The user manually populates this field with the name of a region. The picklist values shown here should match the picklist values in the Region field on the account.</description>
    <inlineHelpText>This picklist field is optional. The user manually populates this field with the name of a region. The picklist values shown here should match the picklist values in the Region field on the account.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>