force-app/main/default/objects/LLC_BI__Pricing_Matrix__c/fields/LLC_BI__Teaser_Term__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Teaser_Term__c</fullName>
    <description>The system automatically populates this optional field using values from the Pricing Matrix to indicate the number of payments the teaser rate is in effect.</description>
    <inlineHelpText>This system-populated field displays the number of payments the teaser rate is in effect.</inlineHelpText>
    <label>Teaser Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>